<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">随便瞧瞧</string>

   <string name="getdata_fail">获取数据失败,请稍后再试</string>  
   
   <string name="toast_register_fail">注册失败</string>  
   <string name="toast_login_fail">登录失败</string>  
   <string name="toast_getdata_fail">获取数据失败</string>  
   <string name="toast_anylizedata_fail">解析数据失败</string> 
   <string name="toast_collect_success">收藏成功</string> 
   <string name="toast_save_fail">未检测到SD卡，保存失败</string> 
   <string name="toast_save_success">保存成功 </string>
   <string name="toast_save_fail2">保存失败</string>
   <string name="toast_savefile_end">文件保存在</string>
   <string name="toast_no_txtcount">内容不能为空</string>
   <string name="toast_too_txtcount">发送文本长度过长，请缩减字数</string>
   <string name="toast_no_push">暂无推送消息</string>
   <string name="toast_no_function">此功能尚未开放</string>
   <string name="toast_clear_success">清除缓存成功</string>
   <string name="toast_nosupport_weixin">暂不支持微信分享</string>
   <string name="toast_nosupport_friend">暂不支持朋友圈分享</string> 
   <string name="toast_checking_update">正在检测新版本</string>   
   <string name="toast_no_update">未检测到新版本</string>   
   <string name="toast_no_delcollect">没有可删除的收藏</string>   
   <string name="toast_connet_fail">联网失败，请检查网络</string>  
   <string name="toast_update_warn">发现新的版本，详情请到设置里查看</string>    
   <string name="toast_attention_success">关注成功</string>    
   <string name="toast_attention_fail">关注失败</string>    
   <string name="toast_exit_again">再按一次退出程序</string>    
   <string name="toast_bind_success">绑定成功</string>       
   <string name="toast_bind_fail">绑定失败</string>   
        
   <string name="dia_msg_exit_title">确定要退出随便瞧瞧?</string>   
   <string name="dia_msg_exit_msg">亲，再好好考虑一下吧~_~</string>   
   <string name="dia_msg_delcollect_title">删除收藏?</string>   
   <string name="dia_msg_delcollect_msg">确定要清空所有收藏?</string>     
   <string name="dia_msg_unbind_title">解除绑定?</string>   
   <string name="dia_msg_unbind_msg">亲，确定要解除绑定？</string>   
   
   
   <string name="tvt_ver_pre">随便瞧瞧</string>    
   <string name="hint_advise">您的意见将帮助我们改进产品和服务</string> 
      
      
   <string name="lookaround">随便看看</string>  
    
   <string name="clect">收藏</string>
   <string name="clear">清空</string>
   <string name="save">保存</string>
   <string name="read_orign">阅读原文</string>
   <string name="page">网页</string>
      
      
   <string name="setting">设置</string>
   <string name="back">返回</string>
   
   <string name="bind">绑定账号</string>
   <string name="push">我的推送</string>
   <string name="collect">我的收藏</string>
   <string name="flow">节省流量模式</string>
   <string name="clear_cache">清除图片缓存</string>
   <string name="share_grade">分享该应用</string>
   <string name="check_update">检查更新</string>
   <string name="support_developer">支持开发者</string>
   <string name="attention_weibo">关注官方微博</string>
   <string name="support_content">每下载一个应用就可为“希望工程”捐一毛钱，贫困山区的失学儿童们在等待大家拯救@_@</string>
   
   <string name="about">关于</string>
   <string name="unbind">未绑定</string>  
   <string name="advise">意见与反馈</string>  
   
     <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
	<string name="share">分享</string> 
	<string name="multi_share">图文分享</string>
	<string name="share_completed">分享成功</string>
	<string name="share_canceled">分享已取消</string>
	<string name="select_one_plat_at_least">请选择一个目标平台</string>
	<string name="list_friends">%s的朋友</string>
	<string name="share_failed">分享失败</string>
	
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    
	<string name="sinaweibo">新浪微博</string>
	<string name="tencentweibo">腾讯微博</string>
	<string name="qzone">QQ空间</string>
	<string name="wechat">微信好友</string>
	<string name="wechatmoments">微信朋友圈</string>
	
	<string name="about_connect">新浪微博(android火星人)           Gmail(lance.wyj@gmail.com)</string>
	<string name="about_bottom">Copyright @2013 LookAround\nAll Rights Reserved</string>
</resources>