<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sat="http://schemas.android.com/apk/res/com.geniusgithub.lookaround"
    android:orientation="vertical" 
    android:background="@color/window_bg" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">

    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:background="@drawable/map_top_bg">
    
   		<Button
        android:id="@+id/btn_back"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:paddingLeft="5dp"
        android:layout_centerVertical="true"
        android:textColor="#ffffff" 
        android:text="@string/back"
        android:background="@drawable/selector_btn_back"/>
    
        <TextView
        android:id="@+id/tv_bartitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:textSize="20sp" />
       
        <Button
        android:id="@+id/btn_right"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginRight="15dp"
		android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textColor="#ffffff" 
        android:text="@string/clect"
        android:background="@drawable/selector_btn_right"/>

	</RelativeLayout>
	
    <FrameLayout 
        android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">
       
        <ScrollView 
        android:scrollbarThumbVertical="@drawable/scrollbar_handle_vertical" 
        android:focusable="true" 
        android:focusableInTouchMode="true" 
        android:visibility="visible" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" >           
       		<LinearLayout 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">  
            
            
	            <TextView
		        android:id="@+id/tv_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:textSize="20sp" />
	            
	            <LinearLayout 
	            android:layout_width="fill_parent" 
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp">
	               
	                <TextView
			        android:id="@+id/tv_artist"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:textSize="18sp" />
	                
	                <TextView
			        android:id="@+id/tv_time"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="15dp"
			        android:textSize="18sp" />
	            </LinearLayout>
            
            	<View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="1.0px" />
                 
	            <ImageView
	                android:id="@+id/iv_content"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:layout_marginBottom="5dp"
			        android:src="@drawable/load_img">
	                
	            </ImageView>
            
	            <TextView
			        android:id="@+id/tv_content"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="15dp"
			        android:layout_marginBottom="15dp"
			        android:textSize="18sp" />
	                   
           		<View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="1.0px" />
             
	            <RelativeLayout 
	            android:layout_width="fill_parent" 
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp">
	               
	                <TextView
			        android:id="@+id/tv_source"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_centerVertical="true"
			        android:text="来源:未知"
			        android:textSize="18sp" />
	                
	                <Button
			        android:id="@+id/btn_readorign"
			        android:layout_width="100dp"
			        android:layout_height="30dp"
			        android:layout_marginRight="10dp"
					android:layout_alignParentRight="true"
			        android:layout_centerVertical="true"
			        android:text="@string/read_orign"
			        android:background="@drawable/selector_btn_white"/>
	            </RelativeLayout>
                
       		 </LinearLayout>         
   		 </ScrollView>
   		 
        
         <RelativeLayout 
		  android:layout_width="match_parent"
		  android:layout_height="match_parent">
       		
               <android.view.ext.SatelliteMenu
		       android:id="@+id/SatelliteMenu"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_alignParentBottom="true"
		       android:layout_margin="8dp"
		       sat:satelliteDistance="170dp"
		       sat:mainImage="@drawable/ic_launcher"
		       sat:totalSpacingDegree="90"
		       sat:closeOnClick="true"
		       sat:expandDuration="500"/>
         </RelativeLayout>
	    
   		 
    </FrameLayout>

   
    
</LinearLayout>



